--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,9 +23,7 @@
       data-glide-dir=">"
     >next</button>
   </div>
-
   <div class="glide__bullets" data-glide-el="controls[nav]">
-
     <button class="glide__bullet" data-glide-dir="=0"></button>
     <button class="glide__bullet" data-glide-dir="=1"></button>
     <button class="glide__bullet" data-glide-dir="=2"></button>
@@ -54,6 +52,7 @@
   <img src="/images/MEMETICS LOGO.png" />
 </div>
 
+
 <h2 class="title-memes">Create your own Meme!</h2>
 <div class="mt-tutorials">
   <div class="mt-tutorial">
@@ -66,10 +65,10 @@
     </div>
     <div class="mt-tutorial">
     <ol class="list">
-      <li><p class="main-p">Select an image template from
-          <a href="link meme list">Templates</a></p></li>
-      <li><p class="main-p">Write text and save your meme</p></li>
-      <li><p class="main-p">Download or share it!</p></li>
+      <li><p>Select meme image of
+          <a href="link meme list">Meme List</a></p></li>
+      <li><p>Edit text and save your meme</p></li>
+      <li><p>Download and share your meme</p></li>
     </ol>
     </div>
 
