--- a/views/meme-result.hbs
+++ b/views/meme-result.hbs
@@ -1,22 +1,22 @@
-<h1 class="title-memes">BRAVO!</h1>
-<div class="meme-results">
-  <div class="mt-boxes">
-    <div class="mt-title"><img src="{{img}}" /></div>
+<h1 class='title-memes'>BRAVO!</h1>
+<div class='meme-results'>
+  <div class='mt-boxes'>
+    <div class='mt-title'><img src='{{img}}' /></div>
     <div>
 
       <h2>Right click for download</h2>
       <div class="button-edit">
 
         <button>
-          <a href="/memes/update/{{_id}}">Edit</a>
+          <a href='/memes/update/{{_id}}'>Edit</a>
         </button>
       </div>
       <div class="button-edit">
         <button>
-          <a href="/memes/delete/{{_id}}">Delete</a>
+          <a href='/memes/delete/{{_id}}'>Delete</a>
         </button>
         <button>
-          <a href="/memes">Create New Meme</a>
+          <a href='memes'>Create New Meme</a>
         </button>
       </div>
     </div>
