--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -2,15 +2,12 @@
 
 <div class='profile'>
   {{#if userInSession}}
-
     <h2>Welcome, {{userInSession.username}}!</h2>
-
     <p>Check your memes!</p>
     <div class='mt-boxes'>
       {{#if findMemes}}
         {{#each findMemes}}
           <div class='mt-box'>
-
             <div class='mt-img-wrap'><a href='/memes/update/{{_id}}'><img
                   src='{{url}}'
                 /></a></div>
@@ -26,7 +23,6 @@
     <div>
       <p>My Favourites!</p>
       <div class='mt-boxes'>
-
       {{#if fav}}
         {{#each fav}}
           <div class='mt-box'>
@@ -37,18 +33,14 @@
         {{/each}}
       </div>
       {{else}}
-
           <p>Still no favourites added</p>
       {{/if}}
-
     </div>
   {{else}}
-    <p class="text-shadow">Still no logged in user, sorry!</p>
+    <p>Still no logged in user, sorry!</p>
   {{/if}}
-
   <p><a href="/users/delete-user/{{userInSession._id}}"><button>Delete your account</button></a></p>
   <form class='button-nav' id='logout-form' action='/users/logout' method='POST'>
     <button id='logout'>Logout</button>
   </form>
 </div>
-
