--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,10 +38,6 @@ button {
   transition: all 0.2s;
 }
 
-.bin {
-  height: 100px;
-}
-
 button:hover {
   background: rgba(200, 0, 0, 1);
   box-shadow: 0px 0px 10px 0px hsl(0deg 0% 100% / 80%);
@@ -51,6 +47,10 @@ a {
   color: #ffffff;
   text-decoration: none;
   font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 /* Main */
@@ -98,10 +98,6 @@ h1 {
   text-shadow: 2px 2px 4px #000000;
 }
 
-.text-shadow {
-  text-shadow: 2px 2px 4px #000000;
-}
-
 .nav-links {
   background: none;
 }
@@ -129,39 +125,37 @@ h1 {
 }
 .red {
   color: red;
+  cursor: pointer;
+  padding: 15px;
 }
-
 .blank {
   color: transparent;
+  cursor: pointer;
 }
 .blue {
-  color: blue
-
+  color: blue;
 }
+
+.likesButton {
+  cursor: pointer;
+  padding: 15px;
+}
+
 .textDesc {
   padding-right: 30px;
   display: flex;
   justify-content: flex-end;
   background-color: #fefefe5b;
-  color: #000000;
-  justify-content: flex-end;
-  text-shadow: 1px 1px 3px #4e4e4e;
-  font-size: 1.2rem;
-  background-color: #fefefe5b;
 }
-
 .fav {
   font-size: 0.9rem;
 }
-
 
 .cont {
   display: inline;
 }
 
-
-.nav-profile,
-.nav-profile2 {
+.nav-profile {
   display: block;
   background: rgba(200, 0, 0, 0.8);
   color: white;
@@ -169,7 +163,7 @@ h1 {
   text-align: center;
   text-decoration: none;
   font-size: 25px;
-  line-height: 12px;
+  line-height: 0px;
   border: 2px solid white;
   cursor: pointer;
   transition: all 250ms ease-in-out;
@@ -180,10 +174,27 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-
-
+.nav-profile2 {
+  display: block;
+  background: rgba(200, 0, 0, 0.8);
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  font-size: 25px;
+  line-height: 0px;
+  border: 2px solid white;
+  cursor: pointer;
+  transition: all 250ms ease-in-out;
+  box-shadow: 0px 0px 0px 0px white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .nav-profile:hover {
   background: rgba(200, 0, 0, 1);
@@ -199,10 +210,9 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 15px;
+  margin-top: 40px;
 }
-
-.logout {
+#logout {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
 }
@@ -320,10 +330,6 @@ h1 {
   color: #000;
 }
 
-.list a:hover {
-  text-decoration: underline;
-}
-
 /* FOOTER */
 .footer-basic {
   width: auto;
@@ -351,7 +357,6 @@ h1 {
   letter-spacing: 2px;
   margin-bottom: 50px;
   margin-top: 0;
-
 }
 
 .mt-boxes {
@@ -366,12 +371,11 @@ h1 {
   justify-content: center;
   background-color: #fefefe5b;
 }
-.mt-boxes-container{
+.mt-boxes-container {
   background-color: #fefefe5b;
   border-radius: 8px;
 }
-.formCreateUpdate{
-  
+.formCreateUpdate {
 }
 .mt-box {
   max-width: 100%;
@@ -418,12 +422,10 @@ h1 {
   align-content: center;
   justify-content: space-around;
   align-items: center;
-
 }
-
-/* .textDesc{
-  color: initial
-} */
+.textDesc {
+  color: initial;
+}
 
 .mt-caption {
   max-width: 100%;
@@ -467,20 +469,6 @@ h1 {
     7px 6px 1px #cccccc;
 }
 
-.likesButton {
-  cursor: pointer;
-  padding: 10px;
-}
-#likeButton {
-  color: rgb(112, 112, 112);
-}
-
-#cont-logdelete {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-
 .button-edit {
   width: 100%;
   display: flex;
@@ -490,10 +478,6 @@ h1 {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
-}
-
-.hide {
-  display: none;
 }
 
 .button-edit button {
@@ -520,14 +504,12 @@ h1 {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
-  text-shadow: 1px 2px 3px #000000bb;
 }
 
 .meme-text label {
   font-size: 1.5em;
 }
-
-.textForm{
+.textForm {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -547,18 +529,8 @@ h1 {
   align-items: flex-start;
 }
 
-.profile h2 {
-  margin-top: 10px;
-}
-
 .profile button {
   font-size: 0.6em;
-}
-
-.button-profile {
-  display: flex;
-  justify-content: end;
-  margin-right: 3%;
 }
 
 /*log in & sign in*/
@@ -721,7 +693,6 @@ h1 {
     right: 0;
     top: 0;
     z-index: 10;
-    padding: 2%;
   }
 
   .nav-links-item img {
@@ -731,10 +702,10 @@ h1 {
   }
 
   .nav-profile {
-    /* width: 12px;
-    height: 12px; */
+    width: 12px;
+    height: 12px;
     font-size: 20px;
-    line-height: 8px;
+    line-height: 0px;
   }
 
   /* horizontal scrolling*/
@@ -808,15 +779,6 @@ h1 {
   .meme-text label {
     font-size: 1em;
   }
-
-  .button-nav {
-    display: none;
-  }
-
-  .profile h2 {
-    margin-top: 20px;
-    margin-bottom: 5px;
-  }
 }
 
 @media (max-width: 750px) {
@@ -827,18 +789,6 @@ h1 {
 
 @media (max-width: 600px) {
   .mt-box {
-    width: 83%;
-  }
-}
-
-@media (max-width: 750px){
-  .mt-box{
-    width: 35%;
-  }
-}
-
-@media (max-width: 600px){
-  .mt-box{
     width: 83%;
   }
 }
