--- a/views/meme-update.hbs
+++ b/views/meme-update.hbs
@@ -1,9 +1,8 @@
-<h1 class='title-memes'>UPDATE YOUR MEME!</h1>
-<div class='mt-boxes'>
-  <div class='mt-img-wrap'>
-    <img src='{{memeToBeUpdated.url}}' />
+<h1 class="title-memes">UPDATE YOUR MEME!</h1>
+<div class="mt-boxes">
+  <div class="mt-img-wrap">
+    <img src="{{memeToBeUpdated.url}}" />
   </div>
-
   <div class="formCreateUpdate">
     <form action="/memes/update/{{memeToBeUpdated.id}}" method="POST">
       <div class="meme-text">
@@ -19,5 +18,4 @@
       <button type="submit">Update Meme!</button>
     </form>
   </div>
-
 </div>
